2008-05-19  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件を保存している状態でページ上部の状態別のリンクをクリックした時に
      検索結果が変化しないバグを修正した。状態別リンクをクリックした場合、選択
      された条件と保存されている条件を合わせて検索する仕様とする。これは不自然
      かもしれないので、この部分の動作を変更する可能性はある。

2008-05-17  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件の保存。キーワード検索の検索条件を保存する条件が間違ってる問題を修正した。

2008-05-17  smeghead <smeghead@users.sourceforge.jp>

    * 0.3.2-beta リリース

2008-05-17  smeghead <smeghead@users.sourceforge.jp>

    * 検索結果でhit件数を表示している部分に、チケットの状態別の内訳を表示するようにした。
    * 検索条件の保存処理の完成。
    * リリースの準備。
    * testの更新。

2008-05-15  smeghead <smeghead@users.sourceforge.jp>

    * 検索条件の保存処理の作成中。cookieの読取。単一の条件の項目とキーワードに対応。

2008-05-14  smeghead <smeghead@users.sourceforge.jp>

    * action構造体の型を他と合わせて大文字から始まるActionに変更した。
    * 検索条件の保存処理の作成中。cookieの設定。

2008-05-12  smeghead <smeghead@users.sourceforge.jp>

    * download時の書き込みをfwrite関数で行なうように修正した。

2008-05-09  smeghead <smeghead@users.sourceforge.jp>

    * freeし忘れている部分を修正した。hook処理の部分とチケット一括登録の部分。
    * 新しいチケットを登録するリンクを新しく追加した。
    * bool型を導入した。

2008-05-07  smeghead <smeghead@users.sourceforge.jp>

    * チケット詳細ページの履歴表示部分でのfreeタイミングによるバグの修正。
      (0.3.1-betaリリース以降に発生したバグ)
    * freeし忘れている部分を修正した。

2008-05-06  smeghead <smeghead@users.sourceforge.jp>

    * freeし忘れている部分を修正した。

2008-05-02  smeghead <smeghead@users.sourceforge.jp>

    * 多くの関数の引数にconstを付けた。

2008-05-01  smeghead <smeghead@users.sourceforge.jp>

    * チケット一括登録時に、入力されていない項目でデフォルト値がある場合はデ
      フォルト値で登録するように修正。

2008-04-29  smeghead <smeghead@users.sourceforge.jp>

    * 文字列用char配列バッファの長さを適切な長さに変更。数値文字列用、日付用など。
    * フォーム部品に適切なmaxlengthを指定した。

2008-04-28  smeghead <smeghead@users.sourceforge.jp>

    * free忘れの部分を修正した。list_freeなど。

2008-04-26  smeghead <smeghead@users.sourceforge.jp>

    * 0.3.1-beta リリース

2008-04-26  smeghead <smeghead@users.sourceforge.jp>

    * CSVのfreeを実装。
    * チケット一括登録作成中。説明文を追加。
    * チケット一括登録作成中。入力チェックjavascriptを追加。
    * testを追加した。
    * ヘルプを追加した。
    * リリース準備
