@@ -11,8 +11,8 @@ List* db_get_list_item(const int, List*);
 int db_register_ticket(Message*);
 void db_delete_ticket(Message*);
 SearchResult* db_search_tickets(List*, char*, Condition*, const int, SearchResult*);
-SearchResult* db_search_tickets_4_report(List*, char*, Condition*, List*, SearchResult*);
-SearchResult* db_get_tickets_by_status(const char*, List*, SearchResult*);
+SearchResult* db_search_tickets_4_report(List*, char*, Condition*, SearchResult*);
+SearchResult* db_get_tickets_by_status(const char*, SearchResult*);
 List* db_get_elements(const int, List*);
 List* db_get_last_elements_4_list(const int, List*);
 List* db_get_last_elements(const int, List*);
